# sup-gui-core

./: .clang-format  .clang-tidy  CMakeLists.txt  ChangeLog  README.md  pom.xml
doc/: CMakeLists.txt  tech-widgets.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/anyvalue-editor/: CMakeLists.txt  anyvalue_editor_main_window.cpp  anyvalue_editor_main_window.h  command_line_options.h  main.cpp  main_window.cpp  main_window.h
src/app/sup-config-editor/: CMakeLists.txt  main.cpp
src/app/sup-dto-editor/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/sup-gui-components/: CMakeLists.txt
src/lib/sup-gui-components/sup/gui/: CMakeLists.txt
src/lib/sup-gui-core/: CMakeLists.txt
src/lib/sup-gui-core/sup/gui/: CMakeLists.txt
src/lib/sup-gui-tools/: CMakeLists.txt
src/lib/sup-gui-views/: CMakeLists.txt
test/: CMakeLists.txt
test/libtest-utils/: CMakeLists.txt
test/libtest-utils/testutils/: CMakeLists.txt  cmake_info.cpp  cmake_info.h  folder_based_test.cpp  folder_based_test.h  folder_test.cpp  folder_test.h  mock_anyvalue_editor_context.cpp  mock_anyvalue_editor_context.h  mock_callback_listener.h  mock_item_listener.cpp  mock_item_listener.h  mock_model_listener.cpp  mock_model_listener.h  test_utils.cpp  test_utils.h
test/parasoft/: CMakeLists.txt
test/resources/anyvalue-editor/: cis-configuration.json  scalar_mix_array.json  scalar_mix_array_pretty.json  system_configs.json  system_configs_pretty.json
test/testsup-gui-benchmark/: CMakeLists.txt  main.cpp  transform_large_anyvalue.cpp  transform_large_anyvalue_benchmark.cpp
test/testsup-gui-components/: CMakeLists.txt  abstract_project_user_interactor_tests.cpp  abstract_text_content_controller_tests.cpp  action_map_tests.cpp  anyvalue_editor_action_folder_tests.cpp  anyvalue_editor_action_handler_copypaste_tests.cpp  anyvalue_editor_action_handler_extended_tests.cpp  anyvalue_editor_action_handler_tests.cpp  anyvalue_editor_action_handler_undoredo_tests.cpp  anyvalue_editor_helper_tests.cpp  anyvalue_editor_project_tests.cpp  anyvalue_item_copy_helper_tests.cpp  anyvalue_item_extented_tests.cpp  anyvalue_viewmodel_tests.cpp  app_context_tests.cpp  app_helper_tests.cpp  app_project_tests.cpp  copy_and_paste_helper_tests.cpp  custom_children_strategies_tests.cpp  custom_children_waveform_strategies_tests.cpp  custom_row_strategies_tests.cpp  dto_composer_action_handler_tests.cpp  dto_editor_project_tests.cpp  dto_waveform_action_handler_tests.cpp  item_filter_helper_tests.cpp  json_panel_controller_tests.cpp  main.cpp  mime_conversion_helper_tests.cpp  waveform_display_controller_tests.cpp  waveform_editor_action_hadler_tests.cpp  waveform_helper_tests.cpp  waveform_twocolumn_viewmodel_tests.cpp
test/testsup-gui-components-app/: CMakeLists.txt  action_map_tests.cpp  app_action_manager_tests.cpp  app_command_manager_tests.cpp  app_command_tests.cpp  app_context_focus_controller_tests.cpp  app_context_manager_tests.cpp  custom_row_waveform_strategies_tests.cpp  dto_composer_tab_controller_tests.cpp  main.cpp  proxy_action_tests.cpp  tree_helper_tests.cpp  tree_view_component_provider_tests.cpp  waveform_table_component_provider_tests.cpp  worker_manager_test.cpp
test/testsup-gui-core/: CMakeLists.txt  abstract_project_user_interactor_tests.cpp  anyvalue_clipboard_utils_tests.cpp  anyvalue_conversion_utils_tests.cpp  anyvalue_editor_action_folder_tests.cpp  anyvalue_editor_action_handler_copypaste_tests.cpp  anyvalue_editor_action_handler_extended_tests.cpp  anyvalue_editor_action_handler_tests.cpp  anyvalue_item_builder_tests.cpp  anyvalue_item_tests.cpp  anyvalue_item_undo_tests.cpp  anyvalue_item_utils_tests.cpp  anyvalue_utils_tests.cpp  anyvalue_viewmodel_tests.cpp  app_context_tests.cpp  chart_items_tests.cpp  custom_row_strategies_tests.cpp  domain_anyvalue_builder_tests.cpp  exceptions_tests.cpp  flags_tests.cpp  main.cpp  message_event_tests.cpp  message_handler_decorator_tests.cpp  mime_conversion_helper_tests.cpp  proxy_action_tests.cpp  query_result_tests.cpp  recent_project_path_tests.cpp  scalar_conversion_utils_tests.cpp  scalartype_property_item_tests.cpp  settings_item_tests.cpp  settings_model_tests.cpp  standard_message_handlers_tests.cpp  sup_dto_model_tests.cpp  sup_gui_core_exceptions_tests.cpp  version_helper_tests.cpp  version_tests.cpp  waveform_helper_tests.cpp  waveform_model_tests.cpp
test/testsup-gui-integration/: CMakeLists.txt  anyvalue_clipboard_utils_tests.cpp  anyvalue_editor_action_handler_extended_tests.cpp  app_action_manager_tests.cpp  app_command_manager_tests.cpp  app_command_tests.cpp  axis_plot_controller_tests.cpp  chart_viewport_controller_tests.cpp  custom_children_waveform_strategies_tests.cpp  custom_row_waveform_strategies_tests.cpp  line_series_controller_tests.cpp  line_series_data_controller_tests.cpp  pen_controller_tests.cpp  tree_view_component_provider_tests.cpp  waveform_editor_action_hadler_tests.cpp  waveform_table_component_provider_tests.cpp  waveform_twocolumn_viewmodel_tests.cpp
test/testsup-gui-tools/: CMakeLists.txt  anyvalue_editor_action_handler_extended_tests.cpp  anyvalue_editor_action_handler_tests.cpp  anyvalue_editor_actions_tests.cpp  anyvalue_editor_helper_tests.cpp  app_action_helper_tests.cpp  app_action_manager_tests.cpp  app_actions_tests.cpp  app_command_manager_tests.cpp  app_command_tests.cpp  app_context_focus_controller_tests.cpp  app_context_manager_tests.cpp  app_context_tests.cpp  dto_composer_action_handler_tests.cpp  dto_composer_tab_controller_tests.cpp  main.cpp  proxy_action_tests.cpp  tree_view_component_provider_tests.cpp  worker_manager_test.cpp
test/testsup-gui-views/: CMakeLists.txt  abstract_project_user_interactor_tests.cpp  app_action_helper_tests.cpp  container_helper_tests.cpp  custom_splitter_controller_tests.cpp  dto_composer_tab_controller_tests.cpp  dto_composer_view_tests.cpp  main.cpp  main_window_helper_tests.cpp  recent_project_path_tests.cpp  settings_helper_tests.cpp  tree_helper_tests.cpp  tree_view_component_provider_tests.cpp  waveform_table_component_provider_tests.cpp
(+578 files in other folders)
